[gd_scene load_steps=24 format=3 uid="uid://yikc1yrpgi4q"]

[ext_resource type="Texture2D" uid="uid://biddxv4bpv3aj" path="res://Assets/Background.png" id="1_aogkb"]
[ext_resource type="Script" path="res://Main.gd" id="1_it0af"]
[ext_resource type="Script" path="res://Background.gd" id="1_py2me"]
[ext_resource type="Script" path="res://Player.gd" id="4_tkvy6"]
[ext_resource type="Texture2D" uid="uid://dgwtsx7mw5m75" path="res://Assets/Player.png" id="4_ylmre"]
[ext_resource type="PackedScene" uid="uid://ch0p5d7np2wqc" path="res://Coin.tscn" id="7_7c54e"]
[ext_resource type="PackedScene" uid="uid://bk2sljde358i2" path="res://Obstacle.tscn" id="7_xn0eb"]
[ext_resource type="Texture2D" uid="uid://cfcjlcw78287x" path="res://Assets/Circle.png" id="8_qy8pk"]
[ext_resource type="Script" path="res://GameOver.gd" id="9_mvbf1"]
[ext_resource type="AudioStream" uid="uid://cxih8ar7nkvyu" path="res://Assets/CoinCollected.ogg" id="9_vodid"]
[ext_resource type="AudioStream" uid="uid://dn01507vgw3um" path="res://Assets/GameOver.ogg" id="10_b6ibr"]
[ext_resource type="Texture2D" uid="uid://dc4h8difeh5ij" path="res://Assets/luz.tres" id="11_1s4to"]
[ext_resource type="FontFile" uid="uid://21js1mj41x3x" path="res://Assets/fonts/dogica/TTF/dogicabold.ttf" id="12_1ysij"]
[ext_resource type="AudioStream" uid="uid://b1j2doi58ctf7" path="res://Assets/Music.wav" id="13_kch1r"]
[ext_resource type="FontFile" uid="uid://cog1y25c34cqs" path="res://Assets/fonts/GrapeSoda.ttf" id="14_mnigt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yhovt"]
radius = 23.2648

[sub_resource type="Curve" id="Curve_shj8w"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_o3am1"]
offsets = PackedFloat32Array(0.00473934, 0.421801, 0.957346)
colors = PackedColorArray(0.617165, 1, 0.587026, 1, 0, 0.275781, 0.21843, 1, 0, 0.056416, 0.0371249, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ro36x"]
blend_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xbi34"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2r6o7"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp2ra"]
bg_color = Color(0.133333, 0.658824, 0.454902, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yv7f"]
size = Vector2(1600, 2)

[node name="Main" type="Node"]
script = ExtResource("1_it0af")
obstacle = ExtResource("7_xn0eb")
coin = ExtResource("7_7c54e")

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 1.125
autostart = true

[node name="Background" type="Node2D" parent="." groups=["DynamicObject"]]
visible = false
position = Vector2(0, 480)
scale = Vector2(2, 2)
script = ExtResource("1_py2me")

[node name="Background" type="Sprite2D" parent="Background"]
position = Vector2(400, 0)
texture = ExtResource("1_aogkb")

[node name="Background2" type="Sprite2D" parent="Background"]
position = Vector2(1200, 0)
texture = ExtResource("1_aogkb")

[node name="Player" type="RigidBody2D" parent="." groups=["Player"]]
position = Vector2(171, 480)
mass = 2.2
gravity_scale = 1.6
continuous_cd = 1
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("4_tkvy6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_yhovt")

[node name="Particles" type="CPUParticles2D" parent="Player"]
top_level = true
position = Vector2(124, 482)
scale = Vector2(0.5, 0.5)
amount = 15
lifetime = 0.6
texture = ExtResource("8_qy8pk")
spread = 180.0
gravity = Vector2(-2500, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_shj8w")
color_ramp = SubResource("Gradient_o3am1")

[node name="Sprite2D2" type="Sprite2D" parent="Player"]
modulate = Color(0, 1, 0.368627, 0.537255)
material = SubResource("CanvasItemMaterial_ro36x")
texture = ExtResource("11_1s4to")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(2, 2, 2, 1)
material = SubResource("ShaderMaterial_xbi34")
texture = ExtResource("4_ylmre")

[node name="CoinCollected" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("9_vodid")

[node name="GameOver" type="AudioStreamPlayer" parent="Player"]
process_mode = 3
stream = ExtResource("10_b6ibr")

[node name="PointLight2D" type="PointLight2D" parent="Player"]
visible = false
color = Color(0, 1, 0.305882, 1)
energy = 2.0
texture = ExtResource("11_1s4to")

[node name="UI" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 68.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_2r6o7")
theme_override_styles/fill = SubResource("StyleBoxFlat_xp2ra")
value = 100.0
show_percentage = false

[node name="ScoreLabel" type="Label" parent="UI/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_1ysij")
theme_override_font_sizes/font_size = 60
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Control" parent="."]
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_mvbf1")

[node name="Background" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="GameOverLabel" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("14_mnigt")
theme_override_font_sizes/font_size = 100
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgain" type="Button" parent="GameOver"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = 180.0
offset_right = 279.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("14_mnigt")
theme_override_font_sizes/font_size = 50
text = "Play Again"

[node name="Walls" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]
position = Vector2(800, 90)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
shape = SubResource("RectangleShape2D_5yv7f")

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]
position = Vector2(800, 938)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
shape = SubResource("RectangleShape2D_5yv7f")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_kch1r")

[connection signal="timeout" from="SpawnerTimer" to="." method="_on_spawner_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
[connection signal="pressed" from="GameOver/PlayAgain" to="GameOver" method="_on_play_again_pressed"]
